--- a/IIO11300Vktehtavat/Harjoitus1MediaPlayer/MainWindow.xaml
+++ b/IIO11300Vktehtavat/Harjoitus1MediaPlayer/MainWindow.xaml
@@ -10,6 +10,9 @@
         <MediaElement x:Name="mediaElement" HorizontalAlignment="Left" Height="274" Margin="10,35,0,0" VerticalAlignment="Top" Width="497" LoadedBehavior="Manual"/>
         <Button x:Name="btnPlay" Content="Play" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="75" Click="btnPlay_Click"/>
         <Button x:Name="btnPause" Content="Pause" HorizontalAlignment="Left" Height="20" Margin="90,10,0,0" VerticalAlignment="Top" Width="77" Click="btnPause_Click"/>
+        <TextBox x:Name="inFile" HorizontalAlignment="Left" Height="20" Margin="308,10,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="199"/>
+        <TextBlock x:Name="txtFile" HorizontalAlignment="Left" Height="19" Margin="279,10,0,0" TextWrapping="Wrap" Text="File" VerticalAlignment="Top" Width="24" RenderTransformOrigin="0.404,0.54"/>
+        <Button x:Name="btnFile" Content="File" HorizontalAlignment="Left" Height="19" Margin="172,10,0,0" VerticalAlignment="Top" Width="76" Click="btnFile_Click"/>
 
     </Grid>
 </Window>
